1.3.0 () -

------ current release ---------------------------

1.2.0 (2017-05-10) 3f4b2284ad19beacd30e202e6c700a36c2b65c60

- TS-29   tasksh hangs trying to read task from stdin
          (thanks to ilove zfs).
- TS-32   control-d to exit
          (thanks to Eric Hymowitz, Paul Fenwick).
- TS-34   Tasksh throw a warning at the end of a review command
          (thanks to bjonnh).
- TW-1936 Tweak tests to have fuller TAP compliance
          (thanks to Paul J. Fenwick)
- Review report now defaults to 6 days instead of 1 weeķ, which is more
  convenient for those who review weekly
          (thanks to Dirk Deimeke).

------ old releases ------------------------------

1.1.0 (2016-09-06) 464f5ae19f853911e739c2489897aef64345c388

- TD-120  Missing cmakedefine for HAVE_GET_CURRENT_DIR_NAME
          (Thanks to Jörg Krause, Ben Boeckel).
- TW-1845 Cygwin build fails, missing get_current_dir_name
          (thanks to hosaka).
- TS-11   Autoclear in the Task Shell
          (thanks to Lars Kumbier).
- TS-24   add review option (m)odify
          (thanks to David Patrick).
- TS-28   Please add a (m)odify feature for review
          (thanks to Iain R. Learmonth).
- Implemented 'review' command.
- Implemented 'diag' command.
- Added 'review N' option, to specify the number of tasks you would like to
  review.
- Integrated libshared.git.

1.0.0 (2014-12-21) 5934dfcefac6d037a359bc733a8382e42e32552e

- TS-1    Apostrophe inside tasksh 'log' causes segmentation fault
          (thanks to David Stahl).
- TS-2    tasksh segfaults if quotes not closed
          (thanks to Fidel Mato).
- TS-5    tasksh segfaults
          (thanks to David Patrick).
- TS-13   Quotes included when using task shell
          (thanks to Kevin Gunn).
- libreadline support added for line editing and command history.

------ start -----------------------------------

Project started 2014-06-08
