@@ -11,6 +11,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Ben Boeckel
   ilove zfs
   Paul Fenwick
+  Michael Neumann
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
