@@ -31,11 +31,11 @@ set (PACKAGE_TARNAME "${PACKAGE}")
 set (PACKAGE_VERSION "${VERSION}")
 set (PACKAGE_STRING "${PACKAGE} ${VERSION}")
 
-if (FREEBSD)
+if (FREEBSD OR DRAGONFLY)
 SET (TASKSH_MAN1DIR man/man1            CACHE STRING "Installation directory for man pages, section 1")
-else (FREEBSD)
+else (FREEBSD OR DRAGONFLY)
 SET (TASKSH_MAN1DIR share/man/man1      CACHE STRING "Installation directory for man pages, section 1")
-endif (FREEBSD)
+endif (FREEBSD OR DRAGONFLY)
 SET (TASKSH_DOCDIR  share/doc/tasksh    CACHE STRING "Installation directory for doc files")
 SET (TASKSH_RCDIR "${TASKSH_DOCDIR}/rc" CACHE STRING "Installation directory for configuration files")
 SET (TASKSH_BINDIR  bin                 CACHE STRING "Installation directory for the binary")
