@@ -1,5 +1,8 @@
 1.3.0 () -
 
+- TI-91   Timewarrior does not compile on DragonFly
+          (thanks to Michael Neumann).
+
 ------ current release ---------------------------
 
 1.2.0 (2017-05-10) 3f4b2284ad19beacd30e202e6c700a36c2b65c60
